--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,27 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jawad.mystore">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".ThankYouActivity"></activity>
+        <activity android:name=".FinalizeShoppingActivity" />
+        <activity android:name=".CartProductsActivity" />
+        <activity android:name=".FetchEProductsActivity" />
+        <activity android:name=".HomeScreen" />
+        <activity android:name=".SignUpLayout" />
+<!--        <activity android:name=".ShowAllJsonObjects" />-->
+<!--        <activity android:name=".ShowJsonObjectAtivity" />-->
+<!--        <activity android:name=".ActivityEProductActivity" />-->
+<!--        <activity android:name=".CardProductsActivity" />-->
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
